# paf-archive

./: .clinerules  .editorconfig  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  build_multi_platform.ps1  build_paf_gpu.ps1  makefile  paf_create.py  paf_extract.py  pyproject.toml
.github/workflows/: build.yml  deploy-pages.yml
bindings/python/: pyproject.toml
bindings/python/paf/: __main__.py  cli.py  core.py
libpaf/: fnmatch.c  fnmatch.h  libpaf.c  libpaf.h  libpaf_core.c  libpaf_exists.c  libpaf_extract.c  libpaf_list.c  paf.h  paf_cuda.h  paf_cuda_kernels.cu  paf_extractor.c  paf_extractor.h  paf_extractor_gpu.c  paf_generator.c  paf_generator.h  paf_gpu.c  paf_gpu.h  paf_io_directstorage.cpp  sha256.c  sha256.h
libpaf/include/: libpaf.h  paf.h  paf_cuda.h  paf_delta.h  paf_extractor.h  paf_generator.h  paf_gpu.h  paf_gpu_loader.h  paf_patch.hpp  paf_vulkan.h  sha256.h
libpaf/src/: fnmatch.c  libpaf_core.c  libpaf_extract.c  libpaf_list.c  libpaf_patch.c  paf_binary_delta.c  paf_binary_delta.h  paf_delta.c  paf_extractor.c  paf_extractor_gpu.c  paf_generator.c  paf_gpu.c  paf_gpu_loader.c  paf_sha256.comp  paf_vulkan.c
test/: benchmark_100k.c  benchmark_run_only.c  benchmark_win.c  extracted_libpaf.h  full_validation.c  make_malicious.c  out_single  run_extract_test.c  test.cmd  test_all.c  test_all.paf  test_paf.c  test_paf_create.c  test_paf_extract.c  test_v1.c
test/test_all_data/: .pafignore  data.csv  space file.md  日本語.txt
tools/python/: setup.py
wasm/: app.js  build.cmd  i18n.js  index.html  paf.js  paf.wasm  paf_wasm.c  style.css
(+9 files in other folders)
